# subrec

./: Makefile.am  README  README.md  configure.ac
debian/: changelog  control  rules
plugin/: Makefile.am  audiormspower.c  audiormspower.h  audiotrim.c  audiotrim.h  gstaudiotestsrc.c  gstaudiotestsrc.h  subrec-plugin.c
subrec/: .gdbinit  Makefile.am  TODO  about_dialog.c  about_dialog.h  asset_map.c  asset_map.h  blocked_seek.c  blocked_seek.h  builderutils.c  builderutils.h  clip_recorder.c  clip_recorder.h  composition_playlist.c  composition_playlist.h  dcsubtitle.c  dcsubtitle.h  g_compat.c  g_compat.h  gtkcellrenderertime.c  gtkcellrenderertime.h  main.c  main_win.ui  packing_list.c  packing_list.h  preferences.h  preferences_dialog.c  preferences_dialog.h  read_asset_map.c  read_asset_map.h  save_sequence.c  save_sequence.h  segment_test.c  sequence_test.c  subrec  subrec.desktop  subrec.gschema.xml  subtitle_store.c  subtitle_store.h  subtitle_store_io.c  (+7 more)
subrec/images/: lamp.xcf  render_icons.sh
subrec/ui/: main_win.ui  menus.ui
xslt/: subtitles.xslt
