AC_PREREQ(2.60)
AC_INIT(subrec, [0.5])

dnl versions of gstreamer and plugins-base
GST_MAJORMINOR=0.10
AC_SUBST(GST_MAJORMINOR)
GST_REQUIRED=0.10.0
GSTPB_REQUIRED=0.10.0
GSTAUDIO_REQUIRED=0.10.0

AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

AS_LIBTOOL(GST, 2, 0, 0)
LT_INIT

AM_PATH_GLIB_2_0(,,,gmodule gio)

HAVE_GTK3=no
AM_PATH_GTK_3_0(,[HAVE_GTK3=yes])


AC_SUBST(ACLOCAL_AMFLAGS, "-I m4")
dnl Check for pkgconfig first
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

GOBJECT_INTROSPECTION_CHECK([0.9.12])

AG_GST_CHECK_GST($GST_MAJORMINOR, [$GST_REQUIRED], yes)
AG_GST_CHECK_GST_BASE($GST_MAJORMINOR, [$GST_REQUIRED], yes)

GST_CFLAGS="$GLIB_CFLAGS $GST_CFLAGS $GLIB_EXTRA_CFLAGS"
AC_SUBST(GST_CFLAGS)
AG_GST_SET_PLUGINDIR

AC_SUBST(GST_APP_CFLAGS,`pkg-config gstreamer-app-0.10 --cflags`)
AC_SUBST(GST_APP_LIBS,`pkg-config gstreamer-app-0.10 --libs`)


AM_PATH_XML2
GLIB_GSETTINGS

AC_CONFIG_FILES([Makefile subrec/Makefile plugin/Makefile debian/VERSION])

AC_OUTPUT
